Agregar módulo de Clientes - Backend API REST completo
- Modelo Cliente con validaciones
- ClientesController con CRUD completo (GET, POST, PUT, DELETE)
- Configuración de DbContext para tabla Clientes
- Script SQL para crear tabla Clientes con datos de prueba
- Endpoints probados y funcionando con autenticación JWT

--- a/DAS-Grupo09-ProyectoFase2Rest/appsettings.json
+++ b/DAS-Grupo09-ProyectoFase2Rest/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=EnvioPaquete;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=EnvioPaquete;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Jwt": {
     "SecretKey": "SuClaveSecretaSuperSeguraParaJWT2024MinimoDe32Caracteres",
